# raspberry_pi_website

./: Caddyfile  README.md  app.py  caddy.service  flask_app.service  setup.cfg  setup.py  ufw
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  raspberry_pi_website.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/raspberry_pi_website/: Website.html
docs/_sources/: index.rst.txt  modules.rst.txt  raspberry_pi_website.rst.txt
src/raspberry_pi_website/: CONFIG.json  Client.py  Service.py  Website.py  __init__.py  __main__.py  template.service
src/raspberry_pi_website/Templates/default/: run_live_server.sh
src/raspberry_pi_website/Templates/default/templates/: 404.html
