[metadata]
name = kabbes_raspberry_pi_website
version = 0.0.0
author = James Kabbes
author_email = james.kabbes@gmail.com
description = Hosting a website from a raspberry pi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/kabbes_raspberry_pi_website
project_urls =
    GitHub = https://github.com/jameskabbes/raspberry_pi_website
    Documentation = https://jameskabbes.github.io/raspberry_pi_website
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src